tdf#109272: Correct the cursor position for selection delete ...

... with Backspace, in change-tracking.

Change-Id: I3b7d393fc342c296c5ead8e0463fcc5325cbd606